DrewGrammar_with_AST.txt
program      : statement * end!=EOF_TYPE ;
statement    : printstat           
             | blockstat   
             | ifstat      
             | whilestat   
             | assignstat
             | funcdef
             | funccall
             ;

assignstat   : NAME '=' ( expr | funccall ) ';'                              ;  ^( '=' expr | funccall )
printstat    : 'print' '(' expr ')' ';'                                      ;  ^( 'print' expr )
ifstat       : 'if' '(' test ')' statement                                   ;  ^( 'if' test statement )
whilestat    : 'while' '(' test ')' statement                                ;  ^( 'while' test statement )
blockstat    : '{' statement * end!=RCURBRACK '}'                            ;  ^( statement ) 

expr         : ( NAME | NUMBER | STRING )  ( add_op expr ) * end==PLUS,DASH  ;  ^(  )
test         : expr cmp_op expr                                              ;

funcdef      : 'def' NAME parameters statement                               ;  ^( 'def' NAME parameters statement )
funccall     : NAME parameters ';'                                           ;  ^( NAME parameters )
parameters   : '(' NAME * end==NAME ( ',' NAME ) * end==COMMA ')'            ;  ^( $params NAME * )
                                                                                # $ is for artificial node 
STRING       : '"' . * end!=" '"'                                            ;  uhhh
NAME         : ( 'a'..'z' | 'A'..'Z' )                                       ;  uhh                
NUMBER       : ('0'..'9')                                                    ;  uh
cmp_op       : DEQUALS | GE | LE | '>' | '<'                                 ;  ^( root is anything )
add_op       :  '+' | '-'                                                    ;  ^( root is anything )
mult_op      : '*'  | '/'                                                    ;  ^( root is anything )
    
DEQUALS      : '=' '='                                                       ; 
GE           : '>' '='                                                       ;
LE           : '<' '='                                                       ;
#LT          : '<'                                                           ;
#GT          : '>'                                                           ;


# Map rule_name to the token_name that predicts said rule:
PREDICATES: 

NAME -> NAME
NUMBER -> NUMBER
GE -> GT&EQUALS
LE -> LT&EQUALS
funccall -> NAME&LPAREN

END

TOKENS: 
#Token Name     Token Text
NAME            multi
NUMBER          multi 
STRING          multi
COMMA           ,
PERIOD          .
LPAREN          ( 
RPAREN          ) 
LCURBRACK       {
RCURBRACK       }   
LBRACK          [
RBRACK          ]
SEMICOLON       ;
COLON           :
EQUALS          =
GT              >
LT              <   
QUOTE           '
DQUOTE          "
STAR            *
PLUS            +
DASH            -
FSLASH          /
BSLASH          \
IF              if 
WHILE           while
PRINT           print
DEF             def
END
